# codex-slack-ops

./: .dockerignore  .env.example  .env.template  .gitignore  DEPLOY_OTHER_SERVER.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  db.py  exceptions.py  locks.py  main.py  models.py  schemas.py  slack_app.py  slack_ui.py  state_machine.py
app/services/: approval_service.py  slack_service.py
scripts/: approval_runner.py  bootstrap_codex_slack_env.py
tests/: test_bootstrap_codex_slack_env.py  test_slack_socket_mode.py  test_slack_ui.py  test_state_machine.py
