[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-slack-approvals"
version = "0.1.1"
description = "Slack button-based approval orchestrator for Codex command execution"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "slack-bolt>=1.23,<2.0",
  "slack-sdk>=3.35,<4.0",
  "sqlalchemy>=2.0,<3.0",
  "asyncpg>=0.29,<1.0",
  "aiosqlite>=0.20,<1.0",
  "aiohttp>=3.10,<4.0",
  "redis>=5.0,<6.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "httpx>=0.27,<1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0"
]

[tool.setuptools.packages.find]
include = ["app", "app.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
